--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,18 @@
 h1. Mindioso
 
+Mindioso is designed help marketing pros track spending, vendors and ROI quickly and easy.
+
+1) Keep your vendors' contact information handy for everyone on your team.  Like a mini CRM for the vendors you rely on most.
+
+2) Easily track budgets and actual spending .
+
+3) Integrate with the marketing apps you already use to analyze spending in relation to campaign results.
+
+
+
+
+
+
 This application was generated with the "rails_apps_composer":https://github.com/RailsApps/rails_apps_composer gem provided by the "RailsApps Project":http://railsapps.github.com/.
 
 h2. Diagnostics
@@ -31,6 +44,8 @@ h2. Database
 
 This application uses SQLite with ActiveRecord.
 
+****** Haven't set the production database yet - not sure whether this should be MySQL or Postgres  ******
+
 h2. Development
 
 * Template Engine: ERB
@@ -43,6 +58,8 @@ h2. Development
 h2. Email
 
 The application is configured to send email using a Gmail account.
+
+(need to fix this to use smtp)
 
 h2. Getting Started
 
@@ -62,19 +79,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 h2. Contributing
 
-If you make improvements to this application, please share with others.
-
-* Fork the project on GitHub.
-* Make your feature addition or bug fix.
-* Commit with Git.
-* Send the author a pull request.
-
-If you add functionality to this application, create an alternative implementation, or build an application that is similar, please contact me and I'll add a note to the README so that others can find your work.
 
 h2. Credits
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Designed and programmed by Katherine Chalmers
 
 h2. License
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Copyright 2012 WhatsFun.com Inc.  All rights reserved.
